# pproxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  meson.build  meson_options.txt
.github/workflows/: ci.yml  clab-perf.yml
bpf/: sysbpf.bt  xsk_xdpcap.bpf.c
doc/: architecture.mmd  dataflow.mmd  debug.md  modules.mmd  perf.md  ring.md  session-state.mmd  threads.mmd
examples/: README.md  config.example.json  config.pp1.json  config.pp2.json  config.snippets.json
include/pproxy/: dpi.h  drop.h  flow.h  log.h  module.h  packet.h  pkt_io.h  pproxy.h  ring.h  ring_ipc.h  session.h  tunnel.h  xsk_filt.h
scripts/: compile_xsk_xdpcap_bpf.sh  install_libmemif.sh
src/: main.c
src/config/: config.c  config.h
src/core/: dpi.c  drop.c  endpoint.c  error.c  flow.c  log.c  module.c  packet.c  ring.c  ring_ipc.c  session.c  thread.c  time.c
src/dpi/: dns.c  http.c  tls.c
src/io/: dpdk.c  dpdk.h  ks_sock.c  ks_sock.h  memif.c  memif.h  netmap.c  netmap.h  pcap.c  pcap.h  raw_sock.c  raw_sock.h  registry.c  tun.c  tun.h  uring_sock.c  uring_sock.h  xsk.c  xsk.h  xsk_i.h  xsk_xdpcap.c  xsk_xdpcap.h
src/modules/: modules.h  runtime.h
src/modules/left_rx/: left_rx.c
src/modules/left_tx/: left_tx.c
src/modules/mgmt/: mgmt.c
src/modules/right_rx/: right_rx.c
src/modules/right_tx/: right_tx.c
src/modules/timer/: timer.c
src/modules/worker/: worker.c
src/tunnel/: icmp.c  registry.c  tcp.c  udp.c
tests/: e2e.sh  test_af_packet_io.c  test_config_reload.c  test_dpdk_io.c  test_memif_io.c  test_mgmt_http.c  test_netmap_io.c  test_pcap_io.c  test_ring.c  test_ring_bench.c  test_ring_ipc.c  test_tunnel_loopback.c  test_uring_sock.c  test_xsk_io.c
tests/clab/: README.md  build-leaf-image.sh  build-netmap-ko.sh  deploy.sh  gdb-tunnel.sh  generic_vm.clab.yml  perf.sh  pproxy.clab.yml
tests/clab/clab-generic_vm/: ansible-inventory.yml  authorized_keys  nornir-simple-inventory.yml  topology-data.json
tests/clab/clab-generic_vm/.tls/ca/: ca.key  ca.pem
tests/clab/config/: pp1.icmp.json  pp1.json  pp1.udp.json  pp1.udp.left-tun.right-af_xdp.json  pp1.udp.left-tun.right-dpdk.json  pp1.udp.left-tun.right-io_uring.json  pp1.udp.left-tun.right-memif.json  pp1.udp.left-tun.right-netmap.json  pp2.icmp.json  pp2.json  pp2.udp.json  pp2.udp.left-tun.right-af_xdp.json  pp2.udp.left-tun.right-dpdk.json  pp2.udp.left-tun.right-io_uring.json  pp2.udp.left-tun.right-memif.json  pp2.udp.left-tun.right-netmap.json
tests/clab/config/perf/: pp1.udp.left-tun.right-af_xdp.json  pp1.udp.left-tun.right-dpdk.json  pp1.udp.left-tun.right-io_uring.json  pp1.udp.left-tun.right-kernel_socket.json  pp1.udp.left-tun.right-memif.json  pp1.udp.left-tun.right-netmap.json  pp2.udp.left-tun.right-af_xdp.json  pp2.udp.left-tun.right-dpdk.json  pp2.udp.left-tun.right-io_uring.json  pp2.udp.left-tun.right-kernel_socket.json  pp2.udp.left-tun.right-memif.json  pp2.udp.left-tun.right-netmap.json
tests/clab/leaf-bin/: pproxy-ctl
tests/clab/perf/: apply_overlay.py  baseline-direct.sh  check-tunnel.sh  cleanup.sh  collect-cpu.sh  collect-flamegraph.sh  collect-metrics.sh  common.sh  empty_metrics.json  perf-to-speedscope.py  prepare_cfg.py  report.py  run-iperf.sh  scenarios.yaml
tests/clab/reports/: 20260702-matrix.md  20260703-matrix-flame.md
tests/clab/reports/flamegraphs/20260703T030118Z_udp_kernel_p1/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030118Z_udp_kernel_p1/leaf1/: leaf1.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030118Z_udp_kernel_p1/leaf2/: leaf2.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030137Z_udp_kernel_p10/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030137Z_udp_kernel_p10/leaf1/: leaf1.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030137Z_udp_kernel_p10/leaf2/: leaf2.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030224Z_udp_uring_batch32_p1/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030224Z_udp_uring_batch32_p1/leaf1/: leaf1.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030224Z_udp_uring_batch32_p1/leaf2/: leaf2.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030243Z_udp_uring_batch32_p10/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030243Z_udp_uring_batch32_p10/leaf1/: leaf1.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030243Z_udp_uring_batch32_p10/leaf2/: leaf2.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030327Z_udp_af_xdp_p1/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030327Z_udp_af_xdp_p1/leaf1/: leaf1.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030327Z_udp_af_xdp_p1/leaf2/: leaf2.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030345Z_udp_af_xdp_p10/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030345Z_udp_af_xdp_p10/leaf1/: leaf1.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030345Z_udp_af_xdp_p10/leaf2/: leaf2.speedscope.json  speedscope-summary.json  summary.json
tests/clab/reports/flamegraphs/20260703T030438Z_udp_netmap_p1/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030457Z_udp_netmap_p10/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030605Z_udp_dpdk_p1/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T030624Z_udp_dpdk_p10/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T031409Z_udp_memif_p1/: README.md  manifest.json
tests/clab/reports/flamegraphs/20260703T031433Z_udp_memif_p10/: README.md  manifest.json
(+36 files in other folders)
